--- a/HIGExampleApp/Pickers.storyboard
+++ b/HIGExampleApp/Pickers.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="rGq-k1-aLa">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="rGq-k1-aLa">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -20,7 +20,28 @@
                     <view key="view" contentMode="scaleToFill" id="5Gu-am-Qgq">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="98t-2Z-Kic">
+                                <rect key="frame" x="0.0" y="225" width="375" height="216"/>
+                            </pickerView>
+                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="ZuY-9D-sF0">
+                                <rect key="frame" x="0.0" y="451" width="375" height="216"/>
+                                <date key="date" timeIntervalSinceReferenceDate="519144714.38209897">
+                                    <!--2017-06-14 14:51:54 +0000-->
+                                </date>
+                            </datePicker>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="98t-2Z-Kic" firstAttribute="leading" secondItem="ZuY-9D-sF0" secondAttribute="leading" id="0WT-5Y-FZD"/>
+                            <constraint firstAttribute="trailing" secondItem="98t-2Z-Kic" secondAttribute="trailing" id="66f-wz-7vm"/>
+                            <constraint firstItem="98t-2Z-Kic" firstAttribute="centerY" secondItem="5Gu-am-Qgq" secondAttribute="centerY" id="L18-GY-wzv"/>
+                            <constraint firstItem="ZuY-9D-sF0" firstAttribute="bottom" secondItem="1t6-X8-35H" secondAttribute="top" id="Oui-HW-EZm"/>
+                            <constraint firstItem="ZuY-9D-sF0" firstAttribute="centerX" secondItem="5Gu-am-Qgq" secondAttribute="centerX" id="WTO-Rr-18Q"/>
+                            <constraint firstItem="98t-2Z-Kic" firstAttribute="leading" secondItem="5Gu-am-Qgq" secondAttribute="leading" id="WiU-QG-Fej"/>
+                            <constraint firstItem="98t-2Z-Kic" firstAttribute="centerX" secondItem="5Gu-am-Qgq" secondAttribute="centerX" id="lve-JM-ai0"/>
+                            <constraint firstItem="98t-2Z-Kic" firstAttribute="trailing" secondItem="ZuY-9D-sF0" secondAttribute="trailing" id="ph3-4m-Kbs"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Brv-uY-4cL" userLabel="First Responder" sceneMemberID="firstResponder"/>
